<resources>
    <string name="Smooch_activityConversation">Messages</string>
    <string name="Smooch_startOfConversation">This is the start of your conversation with the %1$s team. We\'ll stay in touch to help you get the most out of your app.</string>
    <string name="Smooch_welcome">Feel free to leave us a message about anything that\'s on your mind. We\'ll get back to your questions, suggestion or anything else as soon as we can.</string>
    <string name="Smooch_messageHint">Type a message&#8230;</string>
    <string name="Smooch_btnSend">Send</string>
    <string name="Smooch_errorSendingMessage">Message not delivered. Tap to retry.</string>
    <string name="Smooch_errorCouldNotConnect">Could not connect to server.</string>
    <string name="Smooch_errorUserOffline">No Internet connection.</string>
    <string name="Smooch_errorPostback">An error occurred while processing your action. Please try again.</string>
    <string name="Smooch_creditMessage">Enter your credit card to send %1$s securely to %2$s.</string>
    <string name="Smooch_savedCreditMessage">You\'re about to send %1$s securely to %2$s.</string>
    <string name="Smooch_creditErrorMessage">An error occurred while processing the card. Try again or use a different card.</string>
    <string name="Smooch_btnPayNow">Pay Now</string>
    <string name="Smooch_btnPaymentCompleted">Payment Completed</string>
    <string name="Smooch_btnChangeCard">Change Credit Card</string>
</resources>

