<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:clipChildren="false"
              android:orientation="vertical">

    <android.support.v4.widget.Space
        android:id="@+id/Smooch_actionBarSpace"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>

    <TextView
        android:id="@+id/Smooch_serverBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:background="#ff222222"
        android:gravity="center_vertical|center_horizontal"
        android:lineSpacingMultiplier="@dimen/Smooch_lineSpacingMultiplier"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/Smooch_errorCouldNotConnect"
        android:textColor="@color/Smooch_header"
        android:textSize="@dimen/Smooch_header"
        android:visibility="visible"/>

    <ListView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/smooch_bg_list"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Smooch_inputTextBackground"
        android:clipChildren="false">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Smooch_btnSend"
            android:background="@null"
            android:hint="@string/Smooch_messageHint"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="@integer/Smooch_settings_inputMaxLines"
            android:maxLines="@integer/Smooch_settings_inputMaxLines"
            android:minLines="1"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:textColor="@color/Smooch_inputTextColor"
            android:textColorHint="@color/Smooch_inputTextColorHint"
            android:textSize="@dimen/Smooch_inputTextSize"/>

        <ImageButton
            android:id="@+id/Smooch_btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Smooch_btnSend"
            android:src="@drawable/smooch_btn_send"/>

        <View
            android:id="@+id/Smooch_btnSendHollow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/Smooch_btnSend"
            android:layout_alignTop="@+id/Smooch_btnSend"
            android:background="@drawable/smooch_bg_send_hollow"
            android:visibility="invisible"/>

        <View
            android:id="@+id/Smooch_btnSendHollowBorder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignLeft="@+id/Smooch_btnSend"
            android:layout_alignTop="@+id/Smooch_btnSend"
            android:background="@drawable/smooch_bg_send_hollow_border"
            android:visibility="invisible"/>
    </RelativeLayout>
</LinearLayout>

