<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="#ffffff"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginTop="20dp"
                      android:background="#ffffff"
                      android:clickable="true"
                      android:gravity="center_horizontal"
                      android:orientation="vertical">

            <TextView
                android:id="@+id/dollarAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Smooch_inputTextBackground"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:textColor="@color/Smooch_inputTextColor"
                android:textSize="80sp"/>

            <com.devmarvel.creditcardentry.library.CreditCardForm
                android:id="@+id/creditCardForm"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:card_number_hint="1234 5678 1234 5678"
                app:hint_text_color="#eeeeee"
                app:include_zip="false"
                app:input_background="@drawable/credit_background"/>

            <LinearLayout
                android:id="@+id/savedCreditCardForm"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/savedFormLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/savedFormImage"
                        android:layout_marginTop="2.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/savedFormText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:textSize="19sp"
                        android:textColor="#000000"/>
                </LinearLayout>

                <Button
                    android:id="@+id/changeCardButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Smooch_btnChangeCard"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/Smooch_accent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/creditMessage"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:textSize="15sp"
                android:textColor="@color/Smooch_header"/>

            <TextView
                android:id="@+id/savedCreditMessage"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:textColor="@color/Smooch_header"/>

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/Smooch_creditErrorMessage"
                android:textColor="@color/text_failure_color"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:padding="15dp"/>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/creditCardBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white"
            android:backgroundTint="@color/Smooch_accent"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="20dp"
            android:text="@string/Smooch_btnPayNow"
            android:textAllCaps="false"
            android:textColor="@color/Smooch_userMessageText"
            android:textSize="15sp"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/payNowSpinner"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>